# terminator

./: Cargo.toml  README.md
src/: app.rs  context.rs  lib.rs  main.rs  permissions.rs
src/config/: chat.rs  mod.rs  raw.rs  webhook_url.rs
src/handler/: callback_query.rs  error.rs  message.rs  mod.rs  new_chat_member.rs
