[package]
name = "terminator"
version = "0.1.1"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"

[dependencies]
carapax = "0.5.0"
env_logger = "0.7.1"
hyper = "0.13.2"
liquid = "0.19.0"
log = "0.4.8"
serde = "1.0.104"
serde_yaml = "0.8.11"
tokio = { version = "0.2.13", default-features = false, features = ["fs", "macros", "time"] }
